--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^17.0.0",
+    "emailjs-com": "^3.2.0",
     "mongodb": "^5.1.0",
     "pouchdb": "^8.0.1"
   }
